sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:9: error: not found: value i
      for (j<- 1 to i){
                    ^